Fix layouting issue with error / hint overflowing

--- a/frontend/src/app/code-fixes/code-fixes.component.scss
+++ b/frontend/src/app/code-fixes/code-fixes.component.scss
@@ -1,4 +1,4 @@
-:root {
+:host {
   display: block;
   padding-top: 16px;
 }
