--- a/frontend/src/app/code-snippet/code-snippet.component.scss
+++ b/frontend/src/app/code-snippet/code-snippet.component.scss
@@ -3,6 +3,11 @@
  * SPDX-License-Identifier: MIT
  */
 
+:host {
+  display: block;
+  width: 65em;
+}
+
 .stretched-tabs {
   max-width: 600px;
 }
